bk_ida/gobmkida/c2/initialize_dragon_data
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/initialize_dragon_data/src/engine/dragon.c:1177:6: error: use of undeclared identifier 'xmmword_4947B0'
v2 = xmmword_4947B0; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/initialize_dragon_data/src/engine/dragon.c:1178:6: error: use of undeclared identifier 'xmmword_4947C0'
v3 = xmmword_4947C0; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/initialize_dragon_data/src/engine/dragon.c:1179:6: error: use of undeclared identifier 'xmmword_4947D0'
v4 = xmmword_4947D0; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/initialize_dragon_data/src/engine/dragon.c:1192:12: error: expected expression
*( _OWORD *)( v5 + 10358800) = v2; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/initialize_dragon_data/src/engine/dragon.c:1192:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v5 + 10358800) = v2; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/initialize_dragon_data/src/engine/dragon.c:1193:12: error: expected expression
*( _OWORD *)( v5 + 10358816) = v3; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/initialize_dragon_data/src/engine/dragon.c:1193:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v5 + 10358816) = v3; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/initialize_dragon_data/src/engine/dragon.c:1194:12: error: expected expression
*( _OWORD *)( v5 + 10358832) = v4; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/initialize_dragon_data/src/engine/dragon.c:1194:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v5 + 10358832) = v4; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/initialize_dragon_data/src/engine/dragon.c:1200:6: error: use of undeclared identifier 'xmmword_4947D0'
v4 = xmmword_4947D0; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/initialize_dragon_data/src/engine/dragon.c:1201:6: error: use of undeclared identifier 'xmmword_4947C0'
v3 = xmmword_4947C0; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/initialize_dragon_data/src/engine/dragon.c:1202:6: error: use of undeclared identifier 'xmmword_4947B0'
v2 = xmmword_4947B0; 
     ^
12 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/initialize_dragon_data/src/obj/1/dragon.o] Error 1
